deployssl.yaml
# Copyright 2015 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: esp-echo
spec:
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
    - port: 443
      protocol: TCP
      name: https
  selector:
    app: esp-echo
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  tls:
    - secretName: nginx-ssl
  backend:
    serviceName: esp-echo
    servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: esp-echo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: esp-echo
    spec:
      volumes:
        - name: nginx-ssl
          secret:
            secretName: nginx-ssl
      containers:
        # [START esp]
        - name: esp
          image: gcr.io/endpoints-release/endpoints-runtime:1
          args: [
            "--http_port=8081",
            "--ssl_port=443",
            "--backend=127.0.0.1:8080",
            "--service=test-api.endpoints.testing-ucic.cloud.goog",
            "--rollout_strategy=managed",
          ]
          # [END esp]
          ports:
            - containerPort: 8081
            - containerPort: 443
          volumeMounts:
            - mountPath: /etc/nginx/ssl
              name: nginx-ssl
              readOnly: true
        - name: ucic-social-api
          image: gcr.io/testing-ucic/ucic-social-api:latest
          ports:
            - containerPort: 8080
